2003-02-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Remove references to obsoleted files
	aclocal/enable-gcc28.m4, aclocal/enable-libcdir.m4.

2003-02-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* config.sub (rtems-4-6-branch only): New from subversion.
	* bootstrap (rtems-4-6-branch only): Do not delete config.sub.

2003-02-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/canonical-target-name.m4: Transform tic4x -> RTEMS_CPU=c4x.

2003-02-11	Joel Sherrill <joel@OARcorp.com>

	* VERSION: Updated to rtems-4.6.0pre1.

2003-02-11	Joel Sherrill <joel@OARcorp.com>

	* aclocal/version.m4: Updated to rtems-4.6.0pre1.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* bootstrap: Remove attempts to detect autoconf and automake using
	"which" (PR 325).

2003-02-06	Joel Sherrill <joel@OARcorp.com>

	* README.configure: Updated to reflect new BSPs and deprecated
	targets.

2003-01-28	Joel Sherrill <joel@OARcorp.com>

	* VERSION: Updated to rtems-ss-20030128.

2003-01-28	Joel Sherrill <joel@OARcorp.com>

	* aclocal/version.m4: Updated to rtems-ss-20030128.

2003-01-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/compile.am: Remove CLEAN_DEPEND (Unused). 
	Remove CLOBBER_DEPEND (Unused).

2003-01-20	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/local.am: Remove distclean-local.

2001-01-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/rtems-cpu-subdirs.m4: Print out RTEMS_CPU in error message.
	* aclocal/enable-cxx.m4: Use $enable_cxx instead of $enableval.

2002-12-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/prog-cxx.m4: Remove RTEMS_PROG_CXX.
	Rework RTEMS_PROG_CXX_FOR_TARGET.

2002-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/compile.am: Remove creating $(ARCH) in compilation rules.

2002-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Require autoconf >= 2.57 and automake-1.7.2.

2002-12-10	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
