@@ -35,13 +35,7 @@ PROJECT_TOPdir=${dots}${RTEMS_TOPdir}/'$(top_builddir)'
 fi
 AC_SUBST(PROJECT_TOPdir)
 
-if test "$with_target_subdir" = "." ; then
-# Native
 PROJECT_ROOT="${RTEMS_TOPdir}/\$(top_builddir)"
-else
-# Cross
-PROJECT_ROOT="${RTEMS_TOPdir}/\$(top_builddir)"
-fi
 AC_SUBST(PROJECT_ROOT)
 
 AC_MSG_CHECKING([for RTEMS Version])
